[gd_scene load_steps=12 format=2]

[ext_resource path="res://Weapon/assets/test_sword.png" type="Texture" id=1]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ItemText/ItemText.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/InventorySlot.gd" type="Script" id=4]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.384314, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="StyleBoxFlat" id=6]
resource_local_to_scene = true
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.25098 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -20.0
margin_right = -16.0
margin_bottom = -12.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDElements" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -36.0
margin_right = 96.0
margin_bottom = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="HBoxContainer" parent="HUDElements"]
margin_right = 80.0
margin_bottom = 24.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="PanelContainer" parent="HUDElements/Inventory"]
margin_right = 24.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 4 )

[node name="ItemText" parent="HUDElements/Inventory/Slot1" instance=ExtResource( 3 )]
visible = false
position = Vector2( 272, 24 )
scale = Vector2( 0.4, 0.4 )

[node name="Sprite" type="TextureRect" parent="HUDElements/Inventory/Slot1"]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="Slot2" type="PanelContainer" parent="HUDElements/Inventory"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 4 )

[node name="ItemText" parent="HUDElements/Inventory/Slot2" instance=ExtResource( 3 )]
visible = false
position = Vector2( 244, 24 )
scale = Vector2( 0.4, 0.4 )

[node name="Sprite" type="TextureRect" parent="HUDElements/Inventory/Slot2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )

[node name="Slot3" type="PanelContainer" parent="HUDElements/Inventory"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="ItemText" parent="HUDElements/Inventory/Slot3" instance=ExtResource( 3 )]
visible = false
position = Vector2( 216, 24 )
scale = Vector2( 0.4, 0.4 )

[node name="Sprite" type="TextureRect" parent="HUDElements/Inventory/Slot3"]
margin_left = 4.0
margin_top = 4.0
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 1 )
